<resources>
    <string name="app_name">DirectHiring.com</string>
    <string name="validation_name">DirectHiring</string>
    <string name="join_us">Join Us</string>
    <string name="sign_in">Sign in</string>
    <string name="welcome1txt">Our matching algorithm helps you find the right people.</string>
    <string name="welcome2txt">iOS or Android?You can take us to go.</string>
    <string name="welcome3txt">Signing up takes two minutes and is totally free.</string>
    <string name="hint_name">Username or email</string>
    <string name="hint_password">Password</string>
    <string name="sign_in_facebook">Sign In with Facebook</string>
    <string name="err_msg_password">Enter your Password</string>
    <string name="err_msg_name">Enter your Username</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_email">Email Address</string>
    <string name="hint_confirm_email">Confirm Email Address</string>
    <string name="sign_up_facebook">Sign Up With Facebook</string>
    <string name="signup">Sign Up</string>
    <string name="heading">Ahh,the last step. Don\'t stop now</string>
    <string name="sign_up_txt">By signing up you agree to our</string>
    <string name="terms">Terms of Service</string>
    <string name="and">&amp;</string>
    <string name="privacy">Privacy Policy</string>
    <string name="continue_btn">Continue</string>
    <string-array name="size_entries">
        <item>Helper</item>
        <item>Family</item>
    </string-array>
    <string name="title_activity_dashboard">DashboardActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string name="skip"><![CDATA[Skip>>]]></string>
    <string name="err_msg_email">Enter a valid email</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="nationality">Nationality</string>
    <string name="main_duty">Main Duty</string>
    <string name="availibility">Availibility</string>
    <string name="exp_range">Experience Range</string>
    <string name="day_of_range">Day Off Range</string>
    <string name="age_range">Age Range</string>
    <string name="sal_range">Salary Range</string>
    <string name="Minsal">500</string>
    <string name="Maxsal">1000</string>
    <string name="Minage">23</string>
    <string name="Maxage">50</string>
    <string name="Minday">0</string>
    <string name="Maxday">4</string>
    <string name="Employer_type">Employer Type</string>
    <string name="job_availability">Job Availability</string>
    <string name="house_type">House Type</string>
    <string name="family_member">Family Members</string>
    <string name="title_activity_forgot_password">ForgotPassword</string>
    <string name="forgot_password">Enter Your Email Address</string>
    <string name="rest_pass">Reset Password</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="premium_member1">Free member can able to swipe only three.</string>
    <string name="premium_member2">If you want to swipe more then buy our Premium Membership offer.</string>
    <string name="premium_member3">Spend $48 for Premium Plan for 6 Weeks and get Premium Plan benefits.</string>
    <string name="premium_member4">Refer using 1-touch button to share to all friends on Facebook.</string>
    <string name="paypal_rate">Proceed to Payment: $48</string>
    <string name="facebook_app_id">478945782292175</string>
    <string name="title_activity_myprofile">MYProfile</string>
    <string name="profile_and_requirement"><![CDATA[Profile & Requirements]]></string>
    <string name="lookinf_for">You are currently looking for...</string>

    <string name="error_msg">Error!</string>
    <string name="no_internet">No internet connection, Check your Connection.</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="title_activity_imagechangeadd">ImagechangeaddActivity</string>
    <string name="addimage">Add Image</string>
</resources>
