<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Base_color_green"
    tools:context="afroradix.xigmapro.com.directhiringcom.SignUpSecondPage">
    <ImageView
        android:id="@+id/signinlogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/helperlogo"
        android:layout_marginLeft="@dimen/dp_60"
        android:layout_marginRight="@dimen/dp_60"/>
    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/White"
        android:text="@string/heading"
        android:textStyle="bold"
        android:layout_below="@+id/signinlogo"
        android:textSize="@dimen/sp_22"
        android:layout_marginTop="@dimen/dp_60"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="5dp"
        android:layout_below="@+id/heading">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_user_name_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/White">

            <EditText
                android:id="@+id/user_name_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/White"
                android:textColorHint="@color/White"
                android:singleLine="true"
                android:hint="@string/hint_name"
                android:theme="@style/MyEditTextTheme"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/White">

            <EditText
                android:id="@+id/input_password_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/hint_password"
                android:textColor="@color/White"
                android:textColorHint="@color/White"
                android:theme="@style/MyEditTextTheme"/>
        </android.support.design.widget.TextInputLayout>
        <TextView
            android:id="@+id/bottom_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/White"
            android:text="@string/sign_up_txt"
            android:textStyle="bold"
            android:layout_below="@+id/input_layout_password_reg"
            android:textSize="@dimen/sp_16"
            android:layout_marginTop="@dimen/dp_30"
            android:gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dp_5"
            android:gravity="center">
        <TextView
            android:id="@+id/terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/Button_blue"
            android:text="@string/terms"
            android:textStyle="bold"
            android:textSize="@dimen/sp_18"/>
            <TextView
                android:id="@+id/and"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/White"
                android:text="@string/and"
                android:textStyle="bold"
                android:textSize="@dimen/sp_18"
                android:layout_marginRight="@dimen/dp_1"
                android:layout_marginLeft="@dimen/dp_1"
                />
            <TextView
                android:id="@+id/privacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/Button_blue"
                android:text="@string/privacy"
                android:textStyle="bold"
                android:textSize="@dimen/sp_18"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/loginbtns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Deep_green"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">
        <Button
            android:id="@+id/signin_btn_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/edttextbg"
            android:text="@string/sign_in"
            android:layout_marginLeft="@dimen/dp_40"
            android:layout_marginRight="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginBottom="@dimen/dp_20"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/White"/>
            />
    </LinearLayout>
</RelativeLayout>
