<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Base_color_green"
    tools:context="afroradix.xigmapro.com.directhiringcom.ExistingUserSignin">
    <ImageView
        android:id="@+id/signinlogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/helperlogo"
        android:layout_marginLeft="@dimen/dp_60"
        android:layout_marginRight="@dimen/dp_60"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="60dp"
        android:layout_below="@+id/signinlogo">
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/White">

        <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/White"
            android:textColorHint="@color/White"
            android:singleLine="true"
            android:hint="@string/hint_name"
            android:text="diptojit.majumder"
            android:theme="@style/MyEditTextTheme"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/White">

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/hint_password"
            android:text="123456"
            android:textColor="@color/White"
            android:textColorHint="@color/White"
            android:theme="@style/MyEditTextTheme"/>
    </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/loginbtns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Deep_green"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">
        <Button
            android:id="@+id/signin_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/edttextbg"
            android:text="@string/sign_in"
            android:layout_marginLeft="@dimen/dp_40"
            android:layout_marginRight="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_20"
            android:textSize="@dimen/sp_20"
            android:textColor="@color/White"/>
        <TextView
            android:id="@+id/signin_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_facebook"
            android:layout_gravity="center"
            android:textSize="@dimen/sp_20"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:textColor="@color/White"
            android:textStyle="bold"
            />
    </LinearLayout>
</RelativeLayout>
