<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Base_color_green"
    tools:context="afroradix.xigmapro.com.directhiringcom.CriteriaFamilyType">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="1dp">
            <ImageView
                android:id="@+id/signinlogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/helperlogo"
                android:layout_marginLeft="@dimen/dp_60"
                android:layout_marginRight="@dimen/dp_60"
                android:layout_marginTop="@dimen/dp_40"/>
            <CheckBox
                android:id="@+id/employer_type_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Employer_type"
                android:textSize="@dimen/sp_20"
                android:textColor="@color/White"
                android:layout_marginTop="@dimen/dp_30"
                android:padding="@dimen/dp_10"
                android:layout_marginLeft="@dimen/dp_20"
                android:theme="@style/MyEditTextTheme"
                />
            <Spinner
                android:id="@+id/employer_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/spinner_background_1"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                android:popupBackground="@drawable/pop_up_background"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:theme="@style/MyEditTextTheme"
                android:visibility="gone"/>
            <CheckBox
                android:id="@+id/job_availability_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/job_availability"
                android:textSize="@dimen/sp_20"
                android:textColor="@color/White"
                android:layout_marginTop="@dimen/dp_10"
                android:padding="@dimen/dp_10"
                android:layout_marginLeft="@dimen/dp_20"
                android:theme="@style/MyEditTextTheme"
                />
            <Spinner
                android:id="@+id/job_availability"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/spinner_background_1"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                android:popupBackground="@drawable/pop_up_background"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:theme="@style/MyEditTextTheme"
                android:visibility="gone"/>
            <CheckBox
                android:id="@+id/house_type_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/house_type"
                android:textSize="@dimen/sp_20"
                android:textColor="@color/White"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_10"
                android:padding="@dimen/dp_10"
                android:theme="@style/MyEditTextTheme"
                />
            <Spinner
                android:id="@+id/house_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/spinner_background_1"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:popupBackground="@drawable/pop_up_background"
                android:theme="@style/MyEditTextTheme"
                android:visibility="gone"/>
            <CheckBox
                android:id="@+id/sal_range_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sal_range"
                android:textSize="@dimen/sp_20"
                android:layout_marginLeft="@dimen/dp_20"
                android:textColor="@color/White"
                android:layout_marginTop="@dimen/dp_10"
                android:padding="@dimen/dp_10"
                android:theme="@style/MyEditTextTheme"
                />
            <custom_components.RangeSeekBar
                android:id="@+id/sal_range_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                android:visibility="gone"/>
            <CheckBox
                android:id="@+id/day_of_range_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day_of_range"
                android:textSize="@dimen/sp_20"
                android:textColor="@color/White"
                android:layout_marginTop="@dimen/dp_10"
                android:padding="@dimen/dp_10"
                android:layout_marginLeft="@dimen/dp_20"
                android:theme="@style/MyEditTextTheme"
                />
            <custom_components.RangeSeekBar
                android:id="@+id/day_of_range_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                android:visibility="gone"/>

            <CheckBox
                android:id="@+id/family_member_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/family_member"
                android:textSize="@dimen/sp_20"
                android:layout_marginLeft="@dimen/dp_20"
                android:textColor="@color/White"
                android:layout_marginTop="@dimen/dp_10"
                android:padding="@dimen/dp_10"
                android:theme="@style/MyEditTextTheme"
                />
            <custom_components.RangeSeekBar
                android:id="@+id/family_member_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                android:visibility="gone"/>
            <LinearLayout
                android:id="@+id/loginbtns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/Deep_green"
                android:layout_alignParentBottom="true"
                android:orientation="vertical"
                android:padding="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_20">
                <Button
                    android:id="@+id/continue_btn_last_family"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/edttextbg"
                    android:text="@string/continue_btn"
                    android:layout_marginLeft="@dimen/dp_25"
                    android:layout_marginRight="@dimen/dp_25"
                    android:textSize="@dimen/sp_16"
                    android:textColor="@color/White"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
